fixed grid spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 .App {
   display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
   grid-template-areas:
     "header header"
     "dropdown filter"
@@ -133,6 +135,9 @@ button {
 }
 .filter input::placeholder {
   font-style: italic;
+}
+.filter input:focus {
+  outline: none;
 }
 
 /* ---------- Project Card css ----------------*/
